{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 283,
  "lineage": "97f38d9f-d017-4e67-1523-347d4841ca28",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:security-group/sg-0347bde629c51224b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0347bde629c51224b",
            "ingress": [],
            "name": "eks-P2AGqF2A-cluster-2024081701454784170000000e",
            "name_prefix": "eks-P2AGqF2A-cluster-",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-P2AGqF2A-cluster",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "eks-P2AGqF2A-cluster",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:security-group/sg-0924284942148e743",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0924284942148e743",
            "ingress": [],
            "name": "eks-P2AGqF2A-node-2024081701454784440000000f",
            "name_prefix": "eks-P2AGqF2A-node-",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-P2AGqF2A-node",
              "kubernetes.io/cluster/eks-P2AGqF2A": "owned",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "eks-P2AGqF2A-node",
              "kubernetes.io/cluster/eks-P2AGqF2A": "owned",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2138462049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0347bde629c51224b",
            "security_group_rule_id": "sgr-077ac7e39d42e5a3e",
            "self": false,
            "source_security_group_id": "sg-0924284942148e743",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3543768354",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-047e257b0a0f70391",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-635005413",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-0139086e0eec53846",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3001413677",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-0429ba5325a4f0423",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2074580923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-0f83b051775fa99d4",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1761323930",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-03cb7214955b93538",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-207263825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-04bd45b47c8872d0a",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2205402681",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-0ebac513f39bd59cf",
            "self": false,
            "source_security_group_id": "sg-0347bde629c51224b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3022456282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-0989e205b5a1d9b9f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3941021679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-010701426051ef33d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1320719360",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0924284942148e743",
            "security_group_rule_id": "sgr-05fc2082f3c771b41",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:network-acl/acl-0d832390e05db29fb",
            "default_network_acl_id": "acl-0d832390e05db29fb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d832390e05db29fb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "355262196527",
            "subnet_ids": [
              "subnet-01d37042d3d8586d4",
              "subnet-03d856cfad03722bb",
              "subnet-07ae016eb2647fc93",
              "subnet-09cc04e47411bb3ed",
              "subnet-0b1eb780d81ef86a1",
              "subnet-0cfd77efe6942dda2"
            ],
            "tags": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:route-table/rtb-03afaf7fd461b5417",
            "default_route_table_id": "rtb-03afaf7fd461b5417",
            "id": "rtb-03afaf7fd461b5417",
            "owner_id": "355262196527",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:security-group/sg-04fee3f5c3f95bb9c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04fee3f5c3f95bb9c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "355262196527",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-default",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032311131cb16afde",
            "arn": "arn:aws:ec2:eu-central-1:355262196527:elastic-ip/eipalloc-032311131cb16afde",
            "domain": "vpc",
            "id": "eipalloc-032311131cb16afde",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-78-60-211.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.78.60.211",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-eu-central-1a",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-eu-central-1a",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:internet-gateway/igw-036fb8793aeafcd56",
            "id": "igw-036fb8793aeafcd56",
            "owner_id": "355262196527",
            "tags": {
              "Name": "vpc",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-032311131cb16afde",
            "association_id": "eipassoc-08b28fc406e40c8a1",
            "connectivity_type": "public",
            "id": "nat-0ba88e3d5973c7f55",
            "network_interface_id": "eni-07f33cc397d421387",
            "private_ip": "10.0.4.54",
            "public_ip": "3.78.60.211",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1eb780d81ef86a1",
            "tags": {
              "Name": "vpc-eu-central-1a",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-eu-central-1a",
              "managed-by": "terraform",
              "owner": "Soso"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f48c347e038ecd6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ba88e3d5973c7f55",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f48c347e038ecd6f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-036fb8793aeafcd56",
            "id": "r-rtb-0bbdc7a7f79e97cfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbdc7a7f79e97cfe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:route-table/rtb-0f48c347e038ecd6f",
            "id": "rtb-0f48c347e038ecd6f",
            "owner_id": "355262196527",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-private",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-private",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:route-table/rtb-0bbdc7a7f79e97cfe",
            "id": "rtb-0bbdc7a7f79e97cfe",
            "owner_id": "355262196527",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-public",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-public",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "timeouts": null,
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011002c097139091a",
            "route_table_id": "rtb-0f48c347e038ecd6f",
            "subnet_id": "subnet-01d37042d3d8586d4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd000a47773b362",
            "route_table_id": "rtb-0f48c347e038ecd6f",
            "subnet_id": "subnet-07ae016eb2647fc93"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022560a6f80e39820",
            "route_table_id": "rtb-0f48c347e038ecd6f",
            "subnet_id": "subnet-0cfd77efe6942dda2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f563d0cd6110734a",
            "route_table_id": "rtb-0bbdc7a7f79e97cfe",
            "subnet_id": "subnet-0b1eb780d81ef86a1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e3c2172af0eb1db",
            "route_table_id": "rtb-0bbdc7a7f79e97cfe",
            "subnet_id": "subnet-09cc04e47411bb3ed"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebf3cc17ca2d11d",
            "route_table_id": "rtb-0bbdc7a7f79e97cfe",
            "subnet_id": "subnet-03d856cfad03722bb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-01d37042d3d8586d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d37042d3d8586d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-private-eu-central-1a",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-07ae016eb2647fc93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ae016eb2647fc93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-private-eu-central-1b",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-0cfd77efe6942dda2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfd77efe6942dda2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-private-eu-central-1c",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-0b1eb780d81ef86a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1eb780d81ef86a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-public-eu-central-1a",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-09cc04e47411bb3ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cc04e47411bb3ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-public-eu-central-1b",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:subnet/subnet-03d856cfad03722bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d856cfad03722bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355262196527",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc-public-eu-central-1c",
              "kubernetes.io/cluster/eks-P2AGqF2A": "shared",
              "kubernetes.io/role/elb": "1",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "vpc_id": "vpc-09bd81132a6623139"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:355262196527:vpc/vpc-09bd81132a6623139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d832390e05db29fb",
            "default_route_table_id": "rtb-03afaf7fd461b5417",
            "default_security_group_id": "sg-04fee3f5c3f95bb9c",
            "dhcp_options_id": "dopt-068d574c46322b3de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bd81132a6623139",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03afaf7fd461b5417",
            "owner_id": "355262196527",
            "tags": {
              "Name": "vpc",
              "managed-by": "terraform",
              "owner": "Soso"
            },
            "tags_all": {
              "Name": "vpc",
              "managed-by": "terraform",
              "owner": "Soso"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}